[package]
name = "gclog"
version = "0.2.1"
edition = "2021"
authors = ["Ryan SVIHLA <info@foundev.pro>"]
license = "Apache-2.0"
description = "A tool to analyze jdk8 gc logs"
readme = "README.md"
homepage = "https://github.com/rsvihladremio/gclog"
repository = "https://github.com/rsvihladremio/gclog"
keywords = ["cli", "gclog", "java"]
categories = ["command-line-utilities"]
build = "build.rs"

[build-dependencies]
built = "0.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
tabled = "0.7.0"
time = { version = "0.3.9", features = ["formatting", "parsing", "macros"] }
histogram = "0.6.9"
tempfile = "3.3.0"



